--- a/react-practica-1/index.html
+++ b/react-practica-1/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="../react-practica-3//src/assets/img/10-100448_simpson-donut (1).png">
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>API simpsons</title>
+    <title>react-practica-1</title>
   </head>
   <body>
     <div id="root"></div>
